tests/spec/emit/snapshots/ref_call_append_no_double_eval.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn get() -> Ref<Slice<int>> {
    let _ = fmt.Println("get")
    let mut s = [1]
    &s
  }
  
  fn arg() -> int { let _ = fmt.Println("arg"); 2 }
  
  fn main() {
    get().*.append(arg())
  }
---
package main

import "fmt"

func get() *[]int {
	fmt.Println("get")
	s := []int{1}
	return &s
}

func arg() int {
	fmt.Println("arg")
	return 2
}

func main() {
	recv := *get()
	_ = append(recv[:len(recv):len(recv)], arg())
}
