tests/spec/emit/snapshots/ref_call_field_assign_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct S { x: int }
  
  fn get() -> mut Ref<S> {
    let _ = fmt.Println("get")
    let mut s = S { x: 1 }
    &s
  }
  
  fn arg() -> int { let _ = fmt.Println("arg"); 2 }
  
  fn main() {
    get().x = if arg() > 0 { 3 } else { 4 }
  }
---
package main

import "fmt"

type S struct {
	x int
}

func get() *S {
	fmt.Println("get")
	s := S{x: 1}
	return &s
}

func arg() int {
	fmt.Println("arg")
	return 2
}

func main() {
	ref := get()
	var tmp int
	if arg() > 0 {
		tmp = 3
	} else {
		tmp = 4
	}
	ref.x = tmp
}
