tests/spec/emit/snapshots/ref_call_field_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Item { x: int }
  
  fn get() -> mut Ref<Item> { &Item { x: 0 } }
  
  fn main() {
    get().x = 1
  }
---
package main

type Item struct {
	x int
}

func get() *Item {
	return &Item{x: 0}
}

func main() {
	ref := get()
	ref.x = 1
}
