tests/spec/emit/snapshots/ref_call_newtype_append_no_double_eval.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Wrap(Slice<int>)
  
  fn get() -> Ref<Wrap> {
    let _ = fmt.Println("get")
    let mut w = Wrap([1])
    &w
  }
  
  fn main() {
    get().0.append(2)
  }
---
package main

import "fmt"

type Wrap []int

func get() *Wrap {
	fmt.Println("get")
	w := Wrap([]int{1})
	return &w
}

func main() {
	recv := ([]int)(*get())
	_ = append(recv[:len(recv):len(recv)], 2)
}
