tests/spec/emit/snapshots/ref_call_newtype_nested_assign_no_double_eval.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Inner { x: int }
  struct Wrap(Inner)
  
  fn get() -> mut Ref<Wrap> {
    let _ = fmt.Println("get")
    let mut w = Wrap(Inner { x: 1 })
    &w
  }
  
  fn main() {
    let mut r = get()
    let mut inner = r.0
    inner.x = 2
    r.* = Wrap(inner)
  }
---
package main

import "fmt"

type Inner struct {
	x int
}

type Wrap Inner

func get() *Wrap {
	fmt.Println("get")
	w := Wrap(Inner{x: 1})
	return &w
}

func main() {
	r := get()
	inner := Inner(*r)
	inner.x = 2
	*r = Wrap(inner)
}
