tests/spec/emit/snapshots/ref_channel.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(c: Ref<Channel<string>>) {
    let _ = c
  }
---
package main

func test(c *chan string) {
	_ = c
}
