tests/spec/emit/snapshots/ref_channel_auto_deref_select.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn main() {
    let ch = Channel.buffered<int>(1)
    ch.send(42)
    let r = &ch
    let _ = select {
      let Some(v) = r.receive() => v,
      _ => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	ch := make(chan int, 1)
	lisette.ChannelSend(ch, 42)
	r := &ch
	var tmp_1 int
	ch_2 := *r
	for {
		select {
		case v, ok := <-ch_2:
			if ok {
				tmp_1 = v
			} else {
				ch_2 = nil
				continue
			}
		default:
			tmp_1 = 0
		}
		break
	}
	_ = tmp_1
}
