tests/spec/emit/snapshots/ref_map.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(m: Ref<Map<string, int>>) {
    let _ = m
  }
---
package main

func test(m *map[string]int) {
	_ = m
}
