tests/spec/emit/snapshots/ref_newtype_dot0_assignment_auto_deref.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct UserId(int)
  
  fn main() {
    let mut id = UserId(1)
    let mut r = &id
    r.* = UserId(2)
  }
---
package main

type UserId int

func main() {
	id := UserId(1)
	r := &id
	*r = UserId(2)
}
